Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -67,6 +67,7 @@ header.bk-header {
     display: block;
     float: left;
     margin-top: 8px;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -113,13 +114,12 @@ footer.bk-footer .columns-two-right {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 800px;
+    width: 75%;
     margin: 0;
     padding: 5px 0;
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
